--- a/01_modular/01_全局function模式/test1.html
+++ b/01_modular/01_全局function模式/test1.html
@@ -7,7 +7,10 @@
 <body>
 <script type='text/javascript' src='module1.js'></script>
 <script type='text/javascript'>
-
+  foo();
+  bar();
+  msg = 'NBA';
+  foo();
 </script>
 </body>
 </html>
