--- a/01_modular/02_namespaceģʽ/test2.html
+++ b/01_modular/02_namespaceģʽ/test2.html
@@ -7,7 +7,9 @@
 <body>
 <script type='text/javascript' src='module1.js'></script>
 <script type='text/javascript'>
-
+  obj.foo();
+  obj.msg = 'NBA';
+  obj.foo();
 </script>
 </body>
 </html>
