模块化-IIFE模式

--- a/01_modular/03_IIFEģʽ/test3.html
+++ b/01_modular/03_IIFEģʽ/test3.html
@@ -7,7 +7,9 @@
 <body>
 <script type='text/javascript' src='module3.js'></script>
 <script type='text/javascript'>
-
+  msg = 'NBA';
+  console.log(msg);
+  module3.foo();
 </script>
 </body>
 </html>
