--- a/04_AMD-RequireJS/01_NoAMD/test1.html
+++ b/04_AMD-RequireJS/01_NoAMD/test1.html
@@ -7,6 +7,8 @@
 <div>
   <h1>Modular Demo 1: 未使用AMD(require.js)</h1>
 </div>
-
+<script src="./js/dataService.js" type="text/javascript"></script>
+<script src="./js/alerter.js" type="text/javascript"></script>
+<script src="./app.js" type="text/javascript"></script>
 </body>
 </html>
