--- a/04_AMD-RequireJS/02_RequireJS/index2.html
+++ b/04_AMD-RequireJS/02_RequireJS/index2.html
@@ -5,5 +5,6 @@
 </head>
 <body>
 <!--引入require.js并指定js主文件的入口-->
+<script data-main="./js/main.js" src="./js/libs/require.js"></script>
 </body>
 </html>
